View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0033639 | Community | OCCT:Modeling Algorithms | public | 2024-03-11 09:26 | 2024-06-07 04:47 |
Reporter | eryar | Assigned To | akaftasev | ||
Priority | normal | Severity | minor | ||
Status | new | Resolution | open | ||
Platform | Windows | OS | VC++ 2015 | ||
Product Version | 7.8.1 | ||||
Summary | 0033639: Modeling Algorithms - Boolean torus cut cone failed | ||||
Description | Boolean torus cut cone failed | ||||
Steps To Reproduce | ptorus t 750 250 360 pcone c 200 0 2000 trotate c 0 0 0 1 0 0 90 ttranslate c 0 1000 0 bcut r t c | ||||
Tags | No tags attached. | ||||
Test case number | |||||
related to | 0029449 | new | Open CASCADE | Methods GeomInt_LineTool::DecompositionOfWLine IntTools_WLineTool::DecompositionOfWLine(...) need to be joined in one |
|
torus-cut-cone-failed.png (160,948 bytes) |
|
DecomposeResult(...) in IntPatch_ImpPrmIntersection.cxx file output wrong result. |
|
Branch CR33639 has been created by andrey.kaftasev_159541. SHA-1: 5d3ddec35d664e854643202d31afcac013d61275 Detailed log of new commits: Author: akaftasev Date: Thu Jun 6 14:45:35 2024 +0100 0033639: Modeling Algorithms - Boolean torus cut cone failed Avoid adding an apex of cone as singular pole, which is lying on torus surface |
|
@akaftasev looks as a pure workaround for specific case. Better to find a general problem, |
|
@dpasukhi, It is absolutly specific problem between torus and cone and cone's apex. |
|
@akaftasev, It works! torus-cone-cut.png (119,728 bytes) |
Date Modified | Username | Field | Change |
---|---|---|---|
2024-03-11 09:26 | eryar | New Issue | |
2024-03-11 09:26 | eryar | Assigned To | => oan |
2024-03-11 09:26 | eryar | File Added: torus-cut-cone-failed.png | |
2024-03-23 12:12 | eryar | Relationship added | related to 0029449 |
2024-03-23 12:18 | eryar | Note Added: 0115455 | |
2024-03-25 12:34 | dpasukhi | Target Version | 7.8.1 => |
2024-03-25 12:34 | dpasukhi | Summary | Boolean torus cut cone failed => Modeling Algorithms - Boolean torus cut cone failed |
2024-03-25 12:34 | dpasukhi | Steps to Reproduce Updated | |
2024-05-16 13:27 | oan | Assigned To | oan => |
2024-05-28 17:11 | akaftasev | Assigned To | => akaftasev |
2024-06-06 16:45 | git | Note Added: 0115976 | |
2024-06-06 17:09 | dpasukhi | Note Added: 0115978 | |
2024-06-06 17:13 | akaftasev | Note Added: 0115979 | |
2024-06-07 04:47 | eryar | Note Added: 0115986 | |
2024-06-07 04:47 | eryar | File Added: torus-cone-cut.png |