0033639: Modeling Algorithms - Boolean torus cut cone failed

Avoid adding an apex of cone as singular pole, which is lying on torus surface